--- a/pages/pages_2.html
+++ b/pages/pages_2.html
@@ -55,11 +55,9 @@
             <a href="Projets/Motus.html">Motus / Wordle</a>
           </h2>
           <p>
-            Ce projet est le premier projet effectué durant l'année de Licence
-            informatique. Il nous a permis de nous confronter à un problème plus
-            avancé qu'un simple exercice et nous a permis de nous remettre dans
-            le bain après plusieurs mois sans rien faire (ainsi que jauger notre
-            niveau). <br /><br />
+            Ce projet a été le premier réalisé au cours de l'année de Licence Informatique.<br>
+            Il nous a confrontés à une problématique plus élaborée qu'un simple exercice et nous a permis de reprendre 
+            nos repères après plusieurs mois sans pratique, tout en évaluant notre niveau de manière concrète.<br><br>
             Voici quelques lignes qui montrent ce projet. (+ d'information sur
             la page du projet disponible en cliquant sur le nom du projet.)
           </p>
@@ -138,14 +136,11 @@
             <a href="Projets/Azul.html">Azul</a>
           </h2>
           <p>
-            Azul est un jeu de société dont le but est de gagner. Alors,
-            “évident” me diriez-vous, mais il existe peut-être des jeux où le
-            but est de perdre, ahAH ! Pour gagner, le joueur devra accumuler le
-            plus de points possible en piochant des tuiles sur le plateau de jeu
-            commun et en les plaçant sur son plateau, puis en les glissant sur
-            son mur motif. Je vais pas vous faire un dessin, ce projet était
-            vraiment challengeant, surtout la partie graphique qui m'a donné du
-            fil à retordre. <br /><br />
+            Azul est un jeu de société dans lequel l'objectif est d'accumuler le plus de points possible 
+            en sélectionnant des tuiles sur un plateau commun, puis en les positionnant sur son propre 
+            plateau de façon stratégique.<br>
+            Ce projet a représenté un véritable défi, en particulier sur le plan graphique, qui a 
+            demandé une attention particulière et de nombreuses itérations.<br><br>
             Voici quelques lignes qui montrent ce projet. (+ d'information sur
             la page du projet disponible en cliquant sur le nom du projet.)
           </p>
@@ -230,14 +225,13 @@
             <a href="Projets/Discord_Bot.html">Bot Discord</a>
           </h2>
           <p>
-            Ce projet, hors programme et totalement personnel, m'a permis de
-            toucher à des modules de python auxquels je n'aurais jamais touché
-            en temps normal, m'a permis de prendre connaissance et d'acquérir
-            des aptitudes dans ce langage de programmation que je n'aurais pas
-            obtenu si je ne m'étais pas penché sur les robots qui nous
-            permettent tant de chose sur cette plateforme de discussion et de
-            jeux qui réunit les utilisateurs. J'ai également un peu touché à du
-            javascript, même si c'était que très peu. <br /><br />
+            Ce projet, entièrement personnel et hors programme, m'a permis d'explorer des modules 
+            Python que je n'aurais probablement pas abordés autrement.<br>
+            Il m'a aidé à développer de nouvelles compétences dans ce langage ainsi qu'à mieux 
+            comprendre le fonctionnement des robots et automatisations utilisés sur cette 
+            plateforme de discussion et de jeu nommée Discord.<br>
+            J’ai également eu l’occasion de manipuler un peu de JavaScript, même si de manière 
+            limitée.<br><br>
             Voici quelques lignes qui montrent ce projet. (+ d'information sur
             la page du projet disponible en cliquant sur le nom du projet.)
           </p>
@@ -332,4 +326,5 @@ if __name__ == "__main__":
     </footer>
   </body>
 </html>
+
 
