--- a/pages/pages_3.html
+++ b/pages/pages_3.html
@@ -58,51 +58,38 @@
 
         <article>
           <p>
-            Né à Calais, j'ai fait mes premiers pas en dehors de la maternelle
-            à l'école St-Agnès. J'ai ensuite, malheureusement, dû déménager de
-            cette magnifique ville qu'est Calais pour aller dans le sud, là où
-            la chaleur fait fondre nos atomes si vite, à 15min de Marseille,
-            dans une ville nommée Septèmes-les-Vallons. J'y ai continué mes
-            études au collège Marc Ferrandi. Je suis enfin passé au Lycée, à
-            Marie Madeleine Fourcade, à Gardanne, grâce à mes études de Latin
-            Grec. Sans eux, j'étais contraint de passer au Lycée Saint-Exupery,
-            pas très réputé. <br /><br />
-            C'est là-bas, au lycée, que j'ai commencé à m'intéresser à
-            l'informatique, les études d'info au collège étaient si triviales
-            que ça me lassait plus qu'autre chose, mais au lycée ça a vraiment
-            changé. Je me suis intéressé à la programmation, aux bases de
-            données, aux réseaux, c'était la première matière où je me suis
-            vraiment mis à travailler chez moi pendant plusieurs heures sans
-            voir passer le temps et où je m'amusais vraiment. <br /><br />
-            Ayant des facilités et des parents qui attendaient beaucoup de moi,
-            je me suis mis en quête d'aller dans une prépa intégrée pour obtenir
-            un diplôme d'ingénieur. Mais sans surprise, j'étais pas de niveau…
-            Alors, pas de niveau, tout est relatif, en réalité, j'étais
-            extrêmement surpris des matières abordées dans ma prépa intégrée, 60%
-            des matières étaient composées de Physique et de Chimie, pour 35% de
-            Mathématique et enfin 5% d'Informatique. Alors si j'ai raté ma première
-            année d'intégration à cette prépa, c'est surtout parce que je hais
-            la Physique-Chimie et que cette année était essentiellement composée
-            de ces matières de l'enfer. Parce que oui, la seule matière
-            d'informatique que j'ai eu, je l'ai passée les doigts dans le nez
-            avec 19 aux examens, mais la raison à ça c'est que l'informatique
-            qu'on y a fait était vraiment bidon.. À titre d'exemple, on a appris
-            à se servir de Excel, puis on a appris à faire des requêtes basiques
-            sur MySQL… <br /><br />
-            Après cet échec, qui n'en était pas vraiment un, j'appellerais
-            plutôt ça une erreur de parcours, j'ai décidé de partir en Licence
-            Informatique, Licence dans laquelle j'étais certain d'y trouver de
-            l'informatique à sa juste valeur et de pouvoir la travailler
-            réellement. Alors me voici.
+            Né à Calais, j'ai effectué ma scolarité primaire à l'école Sainte-Agnès 
+            avant de déménager dans le Sud, à proximité de Marseille, dans la ville 
+            de Septèmes-les-Vallons. J'y ai poursuivi mes études au collège Marc 
+            Ferrandi. Par la suite, grâce à mon parcours en Latin et Grec, j'ai 
+            intégré le lycée Marie-Madeleine Fourcade à Gardanne.<br>
+            C'est au lycée que je me suis véritablement intéressé à l'informatique. 
+            Les cours que j’avais suivis au collège étaient trop basiques pour 
+            éveiller ma curiosité, mais au lycée, tout a changé. La programmation, 
+            les bases de données et les réseaux ont été les premières matières 
+            dans lesquelles je me suis investi spontanément, au point de passer 
+            des heures à travailler sans voir le temps passer.<br>
+            Encouragé par mes résultats et les attentes de mon entourage, j’ai 
+            tenté d’intégrer une prépa intégrée afin d’obtenir un diplôme 
+            d'ingénieur. Toutefois, le programme ne correspondait pas à mes 
+            attentes : la majeure partie des enseignements portait sur la 
+            physique, la chimie et les mathématiques, laissant très peu de place 
+            à l'informatique. Malgré de bons résultats dans cette dernière matière, 
+            le manque d'intérêt pour le reste du programme m'a conduit à réorienter 
+            mon parcours. Je considère davantage cette expérience comme un 
+            ajustement nécessaire que comme un échec.<br>
+            J'ai ensuite choisi de rejoindre une Licence Informatique, convaincu 
+            d'y trouver un enseignement aligné avec mes centres d'intérêt et 
+            mes ambitions. C'est dans cette voie que je poursuis désormais mon 
+            développement.<br>
           </p>
-          <br />
+          <br>
           <p>
-            Sinon, en dehors de mon parcours scolaire, je suis une personne
-            assez calme qui apprécie énormément la lecture mais également les
-            jeux, qu'il soit de type société ou vidéo. <br />
-            J'ai une famille de musiciens, ce pourquoi je m'y suis aussi penché,
-            j'ai à mon actif 5 ans de piano et 3 de guitare, ainsi qu'une année
-            de conservatoire au conservatoire de Calais.
+            En dehors de mon parcours académique, je suis une personne plutôt 
+            calme, passionnée par la lecture et les jeux, qu'ils soient de société 
+            ou vidéo. Venant d'une famille de musiciens, j'ai également eu 
+            l'occasion de pratiquer cinq ans de piano, trois ans de guitare, 
+            ainsi qu'une année de conservatoire à Calais.
           </p>
         </article>
       </section>
@@ -174,5 +161,6 @@
     </footer>
   </body>
 </html>
+
 
 
