--- a/pages/pages_3.html
+++ b/pages/pages_3.html
@@ -62,13 +62,13 @@
             avant de déménager dans le Sud, à proximité de Marseille, dans la ville 
             de Septèmes-les-Vallons. J'y ai poursuivi mes études au collège Marc 
             Ferrandi. Par la suite, grâce à mon parcours en Latin et Grec, j'ai 
-            intégré le lycée Marie-Madeleine Fourcade à Gardanne.<br>
+            intégré le lycée Marie-Madeleine Fourcade à Gardanne.<br><br>
             C'est au lycée que je me suis véritablement intéressé à l'informatique. 
             Les cours que j’avais suivis au collège étaient trop basiques pour 
             éveiller ma curiosité, mais au lycée, tout a changé. La programmation, 
             les bases de données et les réseaux ont été les premières matières 
             dans lesquelles je me suis investi spontanément, au point de passer 
-            des heures à travailler sans voir le temps passer.<br>
+            des heures à travailler sans voir le temps passer.
             Encouragé par mes résultats et les attentes de mon entourage, j’ai 
             tenté d’intégrer une prépa intégrée afin d’obtenir un diplôme 
             d'ingénieur. Toutefois, le programme ne correspondait pas à mes 
@@ -161,6 +161,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
