--- a/pages/Projets/Discord_Bot.html
+++ b/pages/Projets/Discord_Bot.html
@@ -69,7 +69,7 @@
             Les tâches récurrentes définies dans TaskCog orchestrent les événements réguliers comme 
             mam_arene_events et petits_events, en respectant les heures spécifiques selon l'heure 
             d'été/d'hiver et en s'assurant de ne pas répéter inutilement les notifications via des 
-            marqueurs de trigger, avec un démarrage conditionné à la préparation du bot.<br>
+            marqueurs de trigger, avec un démarrage conditionné à la préparation du bot.
             Enfin, EventsCog supervise les événements Discord globaux, initialisant le bot à la 
             connexion, chargeant les messages personnalisés, synchronisant les slash commands et 
             parcourant les threads actifs et archivés pour appliquer les mises à jour, tout en filtrant 
